# ASK

./: .gitignore  CMakeLists.txt  Note.md  Readme.md
AutoGen/Protobuf/: BaseType.pb.cc  BaseType.pb.h  EgoObjectFormat.pb.cc  EgoObjectFormat.pb.h  LaneClothidObjectFormat.pb.cc  LaneClothidObjectFormat.pb.h  MovingObjectFormat.pb.cc  MovingObjectFormat.pb.h  ParkingSlotObjectFormat.pb.cc  ParkingSlotObjectFormat.pb.h  PointObjectFormat.pb.cc  PointObjectFormat.pb.h  SensorType.pb.cc  SensorType.pb.h
Data/model/: car.osgb  dog.ive  pedestrain.ive
Examples/: ADAS_Scenario.cpp  APA_Scenario.cpp  CMakeLists.txt  Robot_Scenario.cpp
Include/: CommonHPP.hpp  Ringbuff.hpp  TypesRedefine.hpp
Modules/: CMakeLists.txt
Modules/Transceiver/: TransceiverRPC.hpp  TransceiverZeroCopy.hpp
Modules/Viewer/: TPViewer.cpp  TPViewer.hpp  UserEventHandler.hpp
Runnables/: TrafficPaticipantsManagerRunable.cpp
TrafficParticipantObject/: BaseType.proto  CMakeLists.txt
TrafficParticipantObject/Objects/Base/: ObjectBaseinfo.hpp  TPObjectBase.hpp  TPTrajectoryBase.hpp
TrafficParticipantObject/Objects/Base/Trajectory/: TPLaneCurveLine.hpp  TPLineBase.hpp  TPStraightLine.hpp
TrafficParticipantObject/Objects/ConstObjects/EGO/: CMakeLists.txt  EgoObject.hpp  EgoObjectFormat.proto
TrafficParticipantObject/Objects/ConstObjects/EGO/CollisionCheck/: EGOCollisionCheck.hpp
TrafficParticipantObject/Objects/ConstObjects/Ground/: Ground.hpp  terrain.hpp
TrafficParticipantObject/Objects/DynamicObjects/MovingObject/: MovingObject.hpp  MovingObjectFormat.proto
TrafficParticipantObject/Objects/DynamicObjects/Point/: PointObjectFormat.proto  TPPointObject.hpp  TPPointsObject.cpp.d  TPPointsObject.hpp.d
TrafficParticipantObject/Objects/DynamicObjects/RSP/: Readme  TPObstacleBase.hpp  TPPoint_RSP.hpp
TrafficParticipantObject/Objects/StaticObjects/: TPStaticObject.hpp.d
TrafficParticipantObject/Objects/StaticObjects/Lane/: LaneClothidObjectFormat.proto  TPLaneClothidObject.hpp
TrafficParticipantObject/Objects/StaticObjects/ParkingSlot/: ParkingSlotObjectFormat.proto  TPParkingSlotObject.hpp
TrafficParticipantObject/Scene/: TPHUD.hpp  TPScene.hpp  TrafficPaticipantCamera.hpp
TrafficParticipantObject/Sensors/: SensorType.proto  TPSensorBase.hpp  TPSensorCamera.hpp  TPSensorUnknow.hpp
Utility/: CMakeLists.txt.d  RingMemPool.hpp.d
Utility/WinTraitTest/: CMakeLists.txt  main.cpp
