
SET(LIB_NAME MODULES)

 AUX_SOURCE_DIRECTORY(. DIR_MODULES_SRCS)
 AUX_SOURCE_DIRECTORY(Viewer DIR_MODULES_VIEWER_SRCS)


#  AUX_SOURCE_DIRECTORY(CatagoryGround DIR_GROUND_SRCS)
#  AUX_SOURCE_DIRECTORY(CatagoryRawSensors DIR_RAWSENSOR_SRCS)

 ADD_LIBRARY (${LIB_NAME}  STATIC
            ${DIR_MODULES_SRCS} 
            ${DIR_MODULES_VIEWER_SRCS}
            )

set_target_properties(${LIB_NAME} PROPERTIES
OUTPUT_NAME ${LIB_NAME}s
ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib) 